--- a/ToS/index.html
+++ b/ToS/index.html
@@ -1,116 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme_color">
-    <meta name="description" content="Bucket Lounge - Official Site">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-    <link rel="stylesheet" href="../style.css" type="text/css">
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../mobile-stylesheet.css" />
-    <link rel="stylesheet" href="../printsheet.css" type="text/css" media="print">
-    <link rel="icon" type="image/svg+xml" href="favicons/favicon.svg">
-    <link rel="alternate icon" href="../favicons/favicon.ico">
-    <link rel="mask-icon" href="../favicons/favicon.svg" color="#ff8a01">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bucket Lounge</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme_color">
+  <meta name="description" content="Bucket Lounge - Official Site">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+  <link rel="stylesheet" href="../style.css" type="text/css">
+  <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../mobile-stylesheet.css" />
+  <link rel="stylesheet" href="../printsheet.css" type="text/css" media="print">
+  <link rel="icon" type="image/svg+xml" href="favicons/favicon.svg">
+  <link rel="alternate icon" href="../favicons/favicon.ico">
+  <link rel="mask-icon" href="../favicons/favicon.svg" color="#ff8a01">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bucket Lounge</title>
 </head>
 <body>
     <div></div>
 </body>
 <body id="newbody">
+  <div>
     <div>
-      <div>
-          <sttitle id="sitetitle" class="grid">Bucket Helper ToS</sttitle>
-      </div>
+      <sttitle id="sitetitle" class="grid">Will be moved Soon</sttitle>
     </div>
-      <div class="waves" style="margin-left: -0.02%;">
-        <svg
-          preserveAspectRatio="none"
-          viewBox="0 0 1920 120"
-          xmlns="http://www.w3.org/2000/svg"
-
-        >
-          <path
-          d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-          opacity=".25"
-        />
-          <path
-            d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-            opacity=".5"
-          />
-          <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-        </svg>
-      </div>
-      <div class="grid">
-        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.<br>Merry Christmas 🎅</welcome_msg>
-      </div>
-        <div class="grid">
-            <div>
-                <h1 class="mediumtext">Terms of Service</h1>
-                <div>
-                    <div class="smalltext">1. No Command Spamming! Spamming Commands in #chat or #bot-commands is not allowed and can result in a 7-30 Day ban.</div>
-                </div>
-            </div>
-        </div>
-          <div><br></div>
-            <div class="wavesupside" style="margin-top: 2%">
-              <svg
-                preserveAspectRatio="none"
-                viewBox="0 0 1920 120"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-                opacity=".25"
-              />
-                <path
-                  d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                  opacity=".5"
-                />
-                <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-              </svg>
-            </div>
-            <div class="waves" style="margin-top: -0.5%; margin-left: 0%">
-              <svg
-                preserveAspectRatio="none"
-                viewBox="0 0 1920 120"
-                xmlns="http://www.w3.org/2000/svg"
-                
-              >
-                <path
-                d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-                opacity=".25"
-              />
-                <path
-                  d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                  opacity=".5"
-                />
-                <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-              </svg>
-            </div>
-            <div class="grid" id="sitetitle" style="background-color: transparent">tets</div>
-          <div class="wavesupside" id="lastwave">
-            <svg
-              preserveAspectRatio="none"
-              viewBox="0 0 1920 120"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-              d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-              opacity=".25"
-            />
-              <path
-                d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                opacity=".5"
-              />
-              <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-            </svg>
-          </div>
-        </div>
-    </div>
+  </div>
 </body>
 </html>
