--- a/tools-and-software/index.html
+++ b/tools-and-software/index.html
@@ -62,7 +62,10 @@
               <githb class="mediumtext">Uptime Robot: <a class="mediumlink" href="https://uptimerobot.com/" type="submit">Uptime Robot</a></githb>
           </div>
           <div>
-              <docs class="mediumtext">Bucket Lounge: <a class="mediumlink" href="https://bucketlounge.tk/index.html">Go Back</a></docs>
+              <docs class="mediumtext">Cloudflare Pages: <a class="mediumlink" href="https://pages.cloudflare.com/">Cloudflare</a></docs>
+          </div>
+          <div>
+            <docs class="mediumtext">Bucket Lounge: <a class="mediumlink" href="https://bucketlounge.tk/index.html">Go Back</a></docs>
           </div>
             <div class="wavesupside" style="margin-top: 2%">
               <svg
