--- a/index.html
+++ b/index.html
@@ -2,133 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme_color">
-    <meta name="description" content="Bucket Lounge - Official Site">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="mobile-stylesheet.css" />
-    <link rel="stylesheet" href="./printsheet.css" type="text/css" media="print">
-    <link rel="icon" type="image/svg+xml" href="favicons/favicon.svg">
-    <link rel="alternate icon" href="favicons/favicon.ico">
-    <link rel="mask-icon" href="favicons/favicon.svg" color="#ff8a01">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bucket Lounge</title>
+    <!--Link Tags-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
+    <link id="swap" rel="stylesheet" href="style.css"/>
+    <link id="darkss"/>
+    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 500px)" href="mStyle.css"/>
+    <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
+    <title>Home - Bucket Lounge</title>
 </head>
 <body>
-    <div></div>
-</body>
-<body id="newbody">
-    <div>
-      <div>
-          <sttitle id="sitetitle" class="grid">Bucket Lounge</sttitle>
-      </div>
-    </div>
-      <div class="waves" style="margin-left: -0.02%;">
-        <svg
-          preserveAspectRatio="none"
-          viewBox="0 0 1920 120"
-          xmlns="http://www.w3.org/2000/svg"
+    <notice class="show" id="notice">This page uses cookies to provide functionality and to improve performance. By using the site, you accept the use of cookies.<a style="text-decoration: underline;" href="/privacypolicy">Privacy Policy</a><button onclick="hideElement()"><img src="assets/close.svg"/></button></notice>
+    <pageHead id="pageHead">
+        <leftDivision>
+            <logo><img id="logo" src="/assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
+            <logoText>
+                <span>Bucket Lounge</span>
+            </logoText>
+        </leftDivision>
+        <navBar>
+            <a href="index.html">
+                <home id="home">Home<span class="material-symbols-outlined">home</span></home>
+            </a>
+            <a href="blog.html">
+                <blog id="blog">Blog<span class="material-symbols-outlined">chat</span></Blog>
+            </a>
+            <a href="https://docs.bucketlounge.tk">
+                <docs id="docs">Documentation<span class="material-symbols-outlined">description</span></Docs>
+            </a>
+            <a href="tools.html">
+                <tools id="tools">Tools<span class="material-symbols-outlined">construction</span></search>
+            </a>
+            <lightswitch>
+                <button class="g" id="lightswitch" onclick="hideLB()">
+                    <span class="material-symbols-outlined">dark_mode</span>
+                </button>
+                <button class="hide" id="darkswitch" onclick="hideDB()">
+                    <span style="color: white" class="material-symbols-outlined">light_mode</span>
+                </button>
+            </lightswitch>
+        </navBar>
+    </pageHead>
+    <!-- Please do not put site content in the <body> tags! Always put site content in <content> tags.-->
+    <pageContent>
+        <h1>Welcome to Bucket Lounge!</h1>
+        <gridDivision>
+            <textTitle class="mobileOnly">
+                <h2>Find out what's new on Bucket Lounge</h2>
+            </textTitle>
+            <imageDivision>
+                <img id="blogImage" src="assets/blog.svg" alt="Blog Image"/>
+            </imageDivision>
+            <textDivision>
+                <h2 class="desktopOnly">Find out what's new<br>on Bucket Lounge</h2>
+                <span>Take a look at what's happening right now on Bucket Lounge!</span>
+            </textDivision>
+                <button type="submit" onclick="window.location.href='/blog.html'" id="divisionButton">To Blog</button>
+        </gridDivision>
 
-        >
-          <path
-          d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-          opacity=".25"
-        />
-          <path
-            d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-            opacity=".5"
-          />
-          <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-        </svg>
-      </div>
-      <div class="grid">
-        <welcome_msg id="welcome_message"><br><br>You can find all the links to our socials and Services such as Bucket Helper.</welcome_msg>
-      </div>
-        <div class="grid">
-          <div>
-              <uptmrobot class="mediumtext">Current Bot Status: <a class="mediumlink", href="https://stats.uptimerobot.com/9A3yqHmG0O", type="submit">Uptime Robot</a></uptmrobot>
-          </div>
-          <div>
-              <dscrd class="mediumtext">The Discord Server: <a class="mediumlink", href="https://discord.gg/ZEPQCB68NZ", type="submit">Discord Server</a></dscrd>
-          </div>
-          <div>
-              <replt class="mediumtext">Replit Page: <a class="mediumlink", href="https://unimportantkindheartedquerylanguage.henryschutterle.repl.co/", type="submit">Replit</a></replt>
-          </div>
-          <div>
-              <githb class="mediumtext">Github Repository: <a class="mediumlink" href="https://github.com/Xefili/bucket-lounge" type="submit">Github</a></githb>
-          </div>
-          <div>
-              <docs class="mediumtext">Tools and Software: <a class="mediumlink" href="https://bucketlounge.tk/tools-and-software/">Tools and Software</a></docs>
-          </div>
-          <div>
-              <docs class="mediumtext">Bucket Helper Docs: <a class="mediumlink" href="https://docs.bucketlounge.tk/">Docs</a></docs>
+        <cSpacer></cSpacer>
 
-          </div>
-          <div>
-              <p>Blog out soon! 😉</p>
-          </div>
-          <div><br></div>
-            <div class="wavesupside" style="margin-top: 2%">
-              <svg
-                preserveAspectRatio="none"
-                viewBox="0 0 1920 120"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-                opacity=".25"
-              />
-                <path
-                  d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                  opacity=".5"
-                />
-                <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-              </svg>
-            </div>
-            <div class="waves" style="margin-top: -0.5%;">
-              <svg
-                preserveAspectRatio="none"
-                viewBox="0 0 1920 120"
-                xmlns="http://www.w3.org/2000/svg"
-                
-              >
-                <path
-                d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-                opacity=".25"
-              />
-                <path
-                  d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                  opacity=".5"
-                />
-                <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-              </svg>
-            </div>
-          <div>
-            <p id=big_Discord class="grid">Discord</p>
-            <iframe class="grid" title="Widget" id="discord_widget", src="https://discord.com/widget?id=730737501244751872&theme=dark" width="320" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" style="border: 3px solid white; border-radius: 5%;">Discord Widget</iframe>
-          </div>
-          <div class="wavesupside" id="lastwave">
-            <svg
-              preserveAspectRatio="none"
-              viewBox="0 0 1920 120"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-              d="M0 0v46.29c47.79 22.2 103.59 32.17 158 28 70.36-5.37 136.33-33.31 206.8-37.5 73.84-4.36 147.54 16.88 218.2 35.26 69.27 18 138.3 24.88 209.4 13.08 36.15-6 69.85-17.84 104.45-29.34C989.49 25 1113-14.29 1200 52.47V0z"
-              opacity=".25"
-            />
-              <path
-                d="M0 0v15.81c13 21.11 27.64 41.05 47.69 56.24C99.41 111.27 165 111 224.58 91.58c31.15-10.15 60.09-26.07 89.67-39.8 40.92-19 84.73-46 130.83-49.67 36.26-2.85 70.9 9.42 98.6 31.56 31.77 25.39 62.32 62 103.63 73 40.44 10.79 81.35-6.69 119.13-24.28s75.16-39 116.92-43.05c59.73-5.85 113.28 22.88 168.9 38.84 30.2 8.66 59 6.17 87.09-7.5 22.43-10.89 48-26.93 60.65-49.24V0z"
-                opacity=".5"
-              />
-              <path d="M0 0v5.63C149.93 59 314.09 71.32 475.83 42.57c43-7.64 84.23-20.12 127.61-26.46 59-8.63 112.48 12.24 165.56 35.4C827.93 77.22 886 95.24 951.2 90c86.53-7 172.46-45.71 248.8-84.81V0z" />
-            </svg>
-          </div>
-        </div>
-    </div>
+        <gridDivision>
+            <textTitle class="mobileOnly">
+                <h2>Got a problem?</h2>
+            </textTitle>
+            <imageDivision>
+                <img id="blogImage" src="assets/documentation.svg" alt="Blog Image"/>
+            </imageDivision>
+            <textDivision>
+                <h2 class="desktopOnly">Got a problem?</h2>
+                <span>Read the Bucket Helper Documentation to get help!</span>
+            </textDivision>
+            <button type="submit" onclick="window.location.href='docs.bucketlounge.tk'" id="divisionButton">To Documentation</button>
+        </gridDivision>
+
+        <cSpacer></cSpacer>
+
+        <gridDivision>
+            <textTitle class="mobileOnly">
+                <h2>The Tools I use!</h2>
+            </textTitle>
+            <imageDivision>
+                <img id="blogImage" src="assets/tools.svg" alt="Blog Image"/>
+            </imageDivision>
+            <textDivision>
+                <h2 class="desktopOnly">The Tools I use!</h2>
+                <span>My personal collection of handy tools and websites for programming and troubleshooting.</span>
+            </textDivision>
+            <button type="submit" onclick="window.location.href='/tools.html'" id="divisionButton">To Tool Collection</button>
+        </gridDivision>
+    </pageContent>
 </body>
+<script src="script.js"></script>
 </html>
