--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <notice class="show" id="notice">This page uses cookies to provide functionality and to improve performance. By using the site, you accept the use of cookies.<a style="text-decoration: underline;" href="/privacypolicy">Privacy Policy</a><button onclick="hideElement()"><img src="assets/close.svg"/></button></notice>
     <pageHead id="pageHead">
         <leftDivision>
-            <logo><img id="logo" src="/assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
+            <logo><img id="logo" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText>
                 <span>Bucket Lounge</span>
             </logoText>
