Updated Page Name References

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
         <leftDivision>
             <logo><img id="logo" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText>
-                <span>Bucket Lounge</span>
+                <span>Xefili.dev</span>
             </logoText>
         </leftDivision>
         <navBar>
@@ -37,14 +37,6 @@
             <a href="tools.html">
                 <tools id="tools">Tools<span class="material-symbols-outlined">construction</span></search>
             </a>
-            <lightswitch>
-                <button class="g" id="lightswitch" onclick="hideLB()">
-                    <span class="material-symbols-outlined">dark_mode</span>
-                </button>
-                <button class="hide" id="darkswitch" onclick="hideDB()">
-                    <span style="color: white" class="material-symbols-outlined">light_mode</span>
-                </button>
-            </lightswitch>
         </navBar>
     </pageHead>
     <pageContent>
