--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <leftDivision>
             <logo><img id="logo" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
             <logoText>
-                <span>Bucket Lounge</span>
+                <span>Xefili.dev</span>
             </logoText>
         </leftDivision>
         <navBar>
@@ -37,19 +37,19 @@
             </a>
         </navBar>
     </pageHead>
-    <!-- Please do not put site content in the <body> tags! Always put site content in <content> tags.-->
+    <!-- Please do not put site content in the <body> tags! Always put site content in <pageContent> tags.-->
     <pageContent>
-        <h1>Welcome to Bucket Lounge!</h1>
+        <h1 style="text-align: center;">Glad you made it 👋<br>Welcome to Xefili.dev!</h1>
         <gridDivision>
             <textTitle class="mobileOnly">
-                <h2>Find out what's new on Bucket Lounge</h2>
+                <h2>Find out what's new on Xefili.dev</h2>
             </textTitle>
             <imageDivision>
                 <img id="blogImage" src="assets/blog.svg" alt="Blog Image"/>
             </imageDivision>
             <textDivision>
-                <h2 class="desktopOnly">Find out what's new<br>on Bucket Lounge</h2>
-                <span>Take a look at what's happening right now on Bucket Lounge!</span>
+                <h2 class="desktopOnly">Find out what's new<br>on Xefili.dev</h2>
+                <span>Take a look at what's happening right now on Xefili.dev!</span>
             </textDivision>
                 <button type="submit" onclick="window.location.href='/blog.html'" id="divisionButton">To Blog</button>
         </gridDivision>
