--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
     <link id="swap" rel="stylesheet" href="style.css"/>
-    <link id="darkss"/>
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 500px)" href="mStyle.css"/>
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Home - Bucket Lounge</title>
@@ -42,7 +41,7 @@
         <h1 style="text-align: center;">Glad you made it 👋<br>Welcome to Xefili.dev!</h1>
         <gridDivision>
             <textTitle class="mobileOnly">
-                <h2>Find out what's new on Xefili.dev</h2>
+                <h2>Glad you made it 👋<br>Welcome to Xefili.dev!</h2>
             </textTitle>
             <imageDivision>
                 <img id="blogImage" src="assets/blog.svg" alt="Blog Image"/>
