Fix broken cookie notice & white flash on refresh

--- a/blog.html
+++ b/blog.html
@@ -8,14 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&family=Roboto+Flex:opsz,wdth,wght@8..144,112.5,400;8..144,112.5,700;8..144,112.5,900&display=swap" rel="stylesheet">
-    <link id="swap" rel="stylesheet" href="style.css"/>
-    <link id="swap" rel="stylesheet" href="blog.style.css"/>
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 500px)" href="mStyle.css"/>
+    <link id="swap" rel="stylesheet" href="styles/style.css"/>
+    <link id="swap" rel="stylesheet" href="styles/blog.style.css"/>
     <link rel="icon" type="image/x-icon" href="assets/Bucket Helper.svg">
     <title>Home - Bucket Lounge</title>
 </head>
 <body>
-    <notice class="show" id="notice">This page uses cookies to provide functionality and to improve performance. By using the site, you accept the use of cookies.<a style="text-decoration: underline;" href="/privacypolicy">Privacy Policy</a><button onclick="hideElement()"><img src="assets/close.svg"/></button></notice>
     <pageHead id="pageHead">
         <leftDivision>
             <logo><img id="logo" src="assets/Bucket Helper.svg" alt="Bucket Lounge Logo"></logo>
