--- a/tools.html
+++ b/tools.html
@@ -45,29 +45,29 @@
                         <div id="item" class="item">
                             <img src="assets/vscode.svg"/>
                             <textbox>
-                                <h1>placeholder</h1>
-                                <text>sum placeholder text</text>
+                                <h1>Visual Studio Code</h1>
+                                <text>The main tool I personally use to develop this page.</text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="assets/vscode.svg"/>
+                            <img src="assets/Cloudflare-logo-transparent-v-rgb_thumbnail.webp"/>
                             <textbox>
-                                <h1>Visual Studio Code</h1>
-                                <text>sum placeholder text</text>
+                                <h1>Cloudflare</h1>
+                                <text>Cloudflare Pages, DNS and Zero Trust are key elements of this webpage and it's services. Cloudflare Pages is used to host all the different pages. The api runs locally at home through a Cloudflare Tunnel and is managed remotely. Learn more about this on the <a href="https://xefili.dev/blog.html">Blog</a></text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="assets/vscode.svg"/>
+                            <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
                             <textbox>
-                                <h1>Visual Studio Code</h1>
-                                <text>sum placeholder text</text>
+                                <h1>Github</h1>
+                                <text>Github is used as a way to host the webpage's files in a way for everyone to see.</text>
                             </textbox>
                         </div>
                         <div id="item" class="item">
-                            <img src="assets/vscode.svg"/>
+                            <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"/>
                             <textbox>
-                                <h1>Visual Studio Code</h1>
-                                <text>sum placeholder text</text>
+                                <h1>json-webserver</h1>
+                                <text>The tool behind the api. Learn more <a href="https://github.com/typicode/json-server">here</a></text>
                             </textbox>
                         </div>
                     </div>
