--- a/zeus.html
+++ b/zeus.html
@@ -18,19 +18,50 @@
         </div>
     </pageHead>
     <div id="poster">
-        <span class="material-symbols-outlined grad">flight_takeoff</span>
+        <span class="material-symbols-outlined grad">travel</span>
         <h1>Zeus</h1>
     </div>
     <spacer></spacer>
     <div id="aboutUs">
         <h1>About us</h1>
         <p>Zeus is startup company that wants to revolutionize flying. Our mission is to build jets flying Mach 3.5 and above <em>and</em> keep prices affordable for everyone.</p>
-        <span class="material-symbols-outlined grad">savings</span>
+        <span class="material-symbols-outlined grad">airplane_ticket savings</span>
     </div>
     <spacer></spacer>
     <div id="flights">
         <h1>Flights</h1>
-        <h2>No flights available - check back later</h2>
+        <div>
+            <row>
+                <slot1>FRA</slot1>
+                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3>MJT</slot3>
+            </row>
+            <sp></sp>
+            <row>
+                <slot1>FRA</slot1>
+                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3>MJT</slot3>
+            </row>
+            <sp></sp>
+            <row>
+                <slot1>FRA</slot1>
+                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3>MJT</slot3>
+            </row>
+            <sp></sp>
+            <row>
+                <slot1>FRA</slot1>
+                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3>MJT</slot3>
+            </row>
+            <sp></sp>
+            <row>
+                <slot1>FRA</slot1>
+                <slot2>12:00 <e class="material-symbols-outlined">flight_takeoff</e><e class="material-symbols-outlined">arrow_forward</e><e class="material-symbols-outlined">flight_land</e> 13:00</slot2>
+                <slot3>MJT</slot3>
+            </row>
+        </div>
     </div>
+    <heart>Handcrafted with ❤️ in Germany</heart>
 </body>
 </html>
