--- a/zeus.html
+++ b/zeus.html
@@ -18,7 +18,7 @@
         </div>
     </pageHead>
     <div id="poster">
-        <span class="material-symbols-outlined grad">travel</span>
+        <span class="material-symbols-outlined grad">airlines</span>
         <h1>Zeus</h1>
     </div>
     <spacer></spacer>
